k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: mahjong-solitaire
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: hungrycoexistance51/mahjong-solitarie-front:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
