k8s/redis-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  namespace: mahjong-solitaire
spec:
  clusterIP: None
  selector:
    app: redis
    role: master
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
