k8s/redis-replica-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-replica
  namespace: mahjong-solitaire
spec:
  clusterIP: None
  selector:
    app: redis
    role: replica
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
